--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "engine": {
-    "node": "12.14.x"
+  "engines": {
+    "node": "12.14.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
